fix nav chevron align and hero margines and add hover effect on button

--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 150px;
+  margin-right: 150px;
   margin-top: 14px;
 }
 
 .nav__logo__label {
   color: #ffffff;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 600;
   transition: color 0.5 ease;
 }
@@ -63,9 +63,9 @@ p {
 }
 
 .nav__links__label {
-  font-size: 12px;
-  color: white;
-  transition: color;
+  font-size: 14px;
+  color: #ffffff;
+  transition: color 0.4s ease;
 }
 
 .nav__links__label:hover {
@@ -83,20 +83,27 @@ p {
 
 .nav__links__order-button {
   background-color: #00cf8f;
-  padding: 10px;
+  padding: 14px 16px;
   border: 0px;
   border-radius: 25px;
   cursor: pointer;
+  transition: background-color 0.4s ease;
+}
+
+.nav__links__order-button:hover {
+  background-color: #f09400;
 }
 
 .nav__links__order-label {
   padding-left: 10px;
-  margin-right: 6px;
-
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
 }
 
 .nav__order-button__chevron-img {
+  margin-left: 10px;
   margin-right: 10px;
 }
 
@@ -107,19 +114,19 @@ p {
 .hero-info {
   color: #ffffff;
   text-align: center;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 600;
-  margin-top: 180px;
-  margin-bottom: 10px;
+  margin-top: 260px;
+  margin-bottom: 16px;
 }
 
 .hero-heading {
   color: #ffffff;
   text-align: center;
-  font-size: 56px;
+  font-size: 76px;
   padding-left: 120px;
   padding-right: 120px;
-  margin-bottom: 36px
+  margin-bottom: 44px;
 }
 
 .hero__order-button {
@@ -127,25 +134,34 @@ p {
   margin-left: auto;
   margin-right: auto;
   background-color: #00cf8f;
-  padding: 10px;
+  padding: 14px 16px;
   border: 0;
   border-radius: 30px;
   cursor: pointer;
-  margin-bottom: 200px;
+  margin-bottom: 300px;
+  transition: background-color 0.4s ease;
+}
+
+.hero__order-button:hover {
+  background-color: #f09400;
 }
 
 .hero__order-label {
   padding-left: 10px;
-  margin-right: 6px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
 }
 
 .hero__order-button__chevron-img {
+  margin-left: 10px;
   margin-right: 10px;
 }
 
 .content {
-  margin-left: 100px
+  margin-left: 150px;
+  margin-right: 150px;
 }
 
 .content-heading {
